# getMe

./: .gitignore  .golangci.yml  AGENTS.md  CONTRIBUTING.md  ContainerFile  ContainerFile.server  DOCKERHUB.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum  index.go  main.go  robots.txt
.github/workflows/: benchmarks.yml  docker-server-only.yml  docker.yml  js-publish.yml  lint.yml  pr-benchmark.yml  publish-java-sdk.yml  publish-js-sdk.yml  (+7 more)
benchmarking/: README.md  go.mod  main_test.go  run-benchmarks.sh
cli/: README.md  batch-input.json  go.mod  go.sum  httpClient.go  index.go
commons/: constants.go  go.mod  http_utils.go  types.go
getme-landing/: package.json  pnpm-lock.yaml  tailwind.config.js
http-proxy-go/: go.mod  go.sum  main.go
mcp-server/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-server/getme_mcp_server/: __main__.py  client.py  config.py  server.py  utills.py
mcp-server/tests/: test_client.py
sdks/: README.md
sdks/pythonSdk/: .gitignore  README.md  index.py  pyproject.toml  requirements.txt
sdks/pythonSdk/core/: client.py  constants.py
sdks/pythonSdk/src/getme_python_sdk/: __init__.py
sdks/pythonSdk/src/getme_python_sdk/core/: client.py
server/: ContainerFile  README.md  docker-compose.yml  go.mod  go.sum  index.go  init-server-docker.sh  init-server-local.sh  init-server.sh  server.go  socket.go  teardown-server-docker.sh  teardown-server-local.sh
store/: entry.go  hashTable.go  segment.go  segmentManager.go  store.go
utils/: README.md  go.mod  logger.go
(+120 files in other folders)
