[project]
name = "getme-mcp-server"
version = "0.1.0"
description = "MCP server for getMe (HTTP over Unix domain socket)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project.scripts]
getme-mcp-server = "getme_mcp_server.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["getme_mcp_server"]

[tool.pytest.ini_options]
addopts = "-q"
