[project]
name = "getme-python-sdk"
version = "1.1.0"
description = "Official Python SDK for getMe."
readme = "README.md"
authors = [
    { name = "AatirNadim", email = "aatir.nadim@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "requests-unixsocket==0.4.1",
    "urllib3==2.5.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
